fixed layout issue

--- a/src/Villans/Villans.css
+++ b/src/Villans/Villans.css
@@ -1,4 +1,4 @@
-.villans {
+.villans .villans-list {
     display: flex;
     flex-wrap: wrap;
 }
